controller/test/e2e/testdata/oidc/secured-gateway-policy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-oidc-gw
  namespace: agentgateway-base
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - "oidcgateway.com"
  rules:
    - backendRefs:
        - name: backend
          port: 80
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: gw-policy
  namespace: agentgateway-base
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
  traffic:
    phase: PreRouting
    oidc:
      issuerURL: https://dummy-idp.default.svc.cluster.local:8443
      backendRef:
        group: ""
        kind: Service
        name: dummy-idp
        port: 8443
        namespace: default
      clientID: mcp_gi3APARn2_uHv2oxfJJqq2yZBDV4OyNo
      clientSecret:
        name: oidc-client
      redirectURI: http://oidcgateway.com/oauth/callback
      scopes:
        - openid
        - profile
        - email
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: idp-policy
  namespace: default
spec:
  targetRefs:
    - group: ""
      kind: Service
      name: dummy-idp
  backend:
    tls:
      insecureSkipVerify: All
